# 20-20-20

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: styles.css
src/scripts/: settings.ts  timer.ts  toast-bottom.ts  toast-top.ts
toastBottom/: index.html
toastTop/: index.html
