[package]
name = "app-20-20-20"
version = "1.0.0"
description = "20-20-20"
authors = ["Z'Laast"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "window-unminimize", "window-show", "system-tray", "app-hide", "fs-create-dir", "fs-read-dir", "fs-exists", "fs-write-file", "fs-read-file", "window-set-position", "window-hide", "window-close", "window-set-always-on-top", "window-create", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
auto-launch = "0.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
